--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
   <meta charset="UTF-8"/>
-	<title></title>
+	<title>Broadway Design</title>
 </head>
 <body>
-	<h1>TITLE</h1>
 
+    <h1>Broadway Design</h1>
+    <a href="blank">Home</a>
+    <a href="blank">Process</a>
+    <a href="blank">Work</a>
+    <a href="blank">Team</a>
+    <a href="blank">Contact</a>
 
+    <h2>Our Process</h2>
+    <img src="/Users/callumpollard/Desktop/Broadway_Design/Resources/identify.svg">
+    <h3>Identify</h3>
+    <p>We focus on the most important details.</p>
+
+    <img src="/Users/callumpollard/Desktop/Broadway_Design/Resources/understand.svg">
+    <h3>Understand</h3>
+    <p>We study our projects inside and out.</p>
+
+    <img src="/Users/callumpollard/Desktop/Broadway_Design/Resources/execute.svg">
+    <h3>Execute</h3>
+    <p>We put everything we have into our work.</p>
+
+    <h3>Designed in New York</h3>
+
+    <h3>Portfolio</h3>
+    <p>Coming Soon</p>
+
+    <h3>Team</h3>
+    <p>We're Hiring!</p>
+
+    <h3>Contact</h3>
+    <p>Phone: (555)-555-5555</p>
+    <p>Email: test@example.com</p>
+    <p>Twitter: @test</p>
 
 
 </body>
