--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
-  <meta charset="UTF-8"/>
+    <link href="/Users/callumpollard/Documents/Broadway_Design/Resources/CSS/index.css" rel="stylesheet" type="text/css" >
 	<title>Broadway Design</title>
 </head>
 <body>
@@ -15,15 +14,15 @@
     <a href="blank">Contact</a>
 
     <h2>Our Process</h2>
-    <img src="/Users/callumpollard/Desktop/Broadway_Design/Resources/identify.svg">
+    <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/identify.svg">
     <h3>Identify</h3>
     <p>We focus on the most important details.</p>
 
-    <img src="/Users/callumpollard/Desktop/Broadway_Design/Resources/understand.svg">
+    <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/understand.svg">
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
 
-    <img src="/Users/callumpollard/Desktop/Broadway_Design/Resources/execute.svg">
+    <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/execute.svg">
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
 
