--- a/index.html
+++ b/index.html
@@ -6,39 +6,49 @@
 </head>
 <body>
 
-    <h1>Broadway Design</h1>
-    <a href="blank">Home</a>
-    <a href="blank">Process</a>
-    <a href="blank">Work</a>
-    <a href="blank">Team</a>
-    <a href="blank">Contact</a>
+    <div class="Header">
+        <h1>Broadway Design</h1>
+        <a href="blank">Home</a><br>
+        <a href="blank">Process</a><br>
+        <a href="blank">Work</a><br>
+        <a href="blank">Team</a><br>
+        <a href="blank">Contact</a><br>
+    </div>
 
-    <h2>Our Process</h2>
-    <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/identify.svg">
-    <h3>Identify</h3>
-    <p>We focus on the most important details.</p>
+    <div class="Content1">
+        <h2>Our Process</h2>
+        <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/identify.svg">
+        <h3>Identify</h3>
+        <p>We focus on the most important details.</p>
 
-    <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/understand.svg">
-    <h3>Understand</h3>
-    <p>We study our projects inside and out.</p>
+        <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/understand.svg">
+        <h3>Understand</h3>
+        <p>We study our projects inside and out.</p>
 
-    <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/execute.svg">
-    <h3>Execute</h3>
-    <p>We put everything we have into our work.</p>
+        <img src="/Users/callumpollard/Documents/Broadway_Design/Resources/execute.svg">
+        <h3>Execute</h3>
+        <p>We put everything we have into our work.</p>
+    </div>
 
-    <h3>Designed in New York</h3>
+   <div class="Divider">
+       <h3>Designed in New York</h3>
+    </div>
 
-    <h3>Portfolio</h3>
-    <p>Coming Soon</p>
+    <div class="content2">
+        <h3>Portfolio</h3>
+        <p>Coming Soon</p>
 
-    <h3>Team</h3>
-    <p>We're Hiring!</p>
+        <h3>Team</h3>
+        <p>We're Hiring!</p>
 
-    <h3>Contact</h3>
-    <p>Phone: (555)-555-5555</p>
-    <p>Email: test@example.com</p>
-    <p>Twitter: @test</p>
+        <h3>Contact</h3>
+        <p>Phone: (555)-555-5555</p>
+        <p>Email: test@example.com</p>
+        <p>Twitter: @test</p>
+    </div>
+<div class="footer">
 
+    </div>
 
 </body>
 </html>
