--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
         <p>Twitter: @test</p>
     </div>
 <div class="footer">
-
+    <p>© Broadway 2016</p>
+        <a href="blank">Home</a>
+        <a href="blank">Process</a>
+        <a href="blank">Work</a>
+        <a href="blank">Team</a>
+        <a href="blank">Contact</a>
     </div>
 
 </body>
